--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,7 @@
 
     <url>https://github.com/yupd/xxl-job-auto-register</url>
 
-    <description>
-        xxljob wrapper
-    </description>
+    <description>xxljob wrapper</description>
 
     <licenses>
         <license>
